--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
   <body>
     <h1>Po's City of Dreams</h1>
     <p>Press space to jump</p>
+
+    <div class="saying">
+      <h2></h2>
+    </div>
     <script src="./js/obstacle.js"></script>
     <script src="./js/cookies.js"></script>
     <script src="./js/background.js"></script>
     <script src="./js/player.js"></script>
     <script src="./js/game.js"></script>
     <script src="./js/main.js"></script>
-     
-  
+    
   </body>
 </html>
