--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
     
-    <title>City of Dreams</title>
+    <title>Po's City of Dreams</title>
   </head>
   <body>
     <h1>Po's City of Dreams</h1>
